# thunor

./: .appveyor.yml  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  renovate.json  requirements.txt  setup.cfg  setup.py  tutorial.ipynb  versioneer.py
.github/workflows/: build-docs.yml  python-package.yml  python-publish.yml
benchmarks/: bench_fitting.py
doc/: Makefile  conf.py  implementation.rst  index.rst  installation.rst  make.bat  pytest-sanitize.ini  requirements.txt  tutorial.ipynb  vanderbilt_hts_format.rst
doc/modules/: converters.rst  curve_fit.rst  dip.rst  helpers.rst  index.rst  io.rst  plots.rst  viability.rst
pydrc/: _version.py  curve_fit.py  dip.py  helpers.py  io.py  plots.py
pydrc/tests/: test_pydrc.py
thunor/: __init__.py  _version.py  config.py  curve_fit.py  dip.py  helpers.py  io.py  plots.py  viability.py
thunor/converters/: __init__.py  ctrp2.py  gdsc.py  teicher.py
thunor/testdata/: hts007.h5  test_incucyte_minimal.txt
thunor/tests/: test_curve_fit.py  test_dip.py  test_helpers.py  test_io.py  test_plots.py  test_thunor_core.py  test_viability.py
