[project]
name = "thunor"
dynamic = ["version"]
description = "Dose response curve and drug induced proliferation (DIP) rate fits and visualisation"
authors = [
    {name = "Alex Lubbock", email = "code@alexlubbock.com"},
]
requires-python = ">=3.11"
dependencies = [
    'numpy',
    'scipy',
    'pandas >=3.0.2,<4',
    'plotly',
    'seaborn',
    'tables',
]
readme = "README.md"
license = {text = "GPL-3.0-only"}
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[project.optional-dependencies]
test = ['pytest', 'nbval', 'ruff', 'pytest-cov']
docs = ['sphinx', 'sphinx-rtd-theme', 'nbsphinx', 'ipykernel']

[project.urls]
Homepage = "https://www.thunor.net"

[tool.setuptools.package-data]
thunor = ["testdata/*"]

[build-system]
requires = ["setuptools", "versioneer"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
extend-ignore = ["E203"]
